--- a/assets/player/test.html
+++ b/assets/player/test.html
@@ -12,7 +12,7 @@
         }
     </style>
     <center>
-        <iframe src="playerjs.html?file=https://plrjs.com/x.mp4" type="text/html" width=400 height=300 frameborder="0" allowfullscreen></iframe>
+        <iframe src="playerjs.html?file=https://plrjs.com/x.mp4" type="text/html" width='100%' height='100%' frameborder="0" allowfullscreen></iframe>
     </center>
 </body>
 </html>
